# docker-python-geoserver

./: .env  .gitignore  README.md  docker-compose.yml  jupyter_notebook.ipynb
nginx/files/: default.conf
pythonapi/: Dockerfile  geoserver_json.json  main.py  pyproject.toml
pythonapi/app/: api.py  app.py  conf.py  index.html
pythonapi/app/templates/: index.html
pythonapi/media/: vesuvio.gpkg
pythonapi/python-api/: api.py  main.py
pythonapi/scripts/: entrypoint.sh
