[tool.poetry]
name = "test-python-dockergeoserver"
version = "0.1.0"
description = ""
authors = ["MaxDragonheart <massimilianomoraca@gmail.com>"]
readme = "README.md"
packages = [{include = "test_python_dockergeoserver"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
OWSLib = "^0.27.2"
fsspec = "^2022.8.2"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
